%% GENERATED by scripts/gen_diagrams.py - do not edit by hand.
%% Source of truth: readycall.services.call_orchestrator.machine.TRANSITIONS
stateDiagram-v2
    direction TB
    [*] --> CONNECTING
    [*] --> INTENT_CREATED
    INTENT_CREATED --> CONNECTING
    INTENT_CREATED --> FAILED
    CONNECTING --> ABANDONED
    CONNECTING --> FAILED
    CONNECTING --> IVR
    CONNECTING --> QUEUED
    IVR --> ABANDONED
    IVR --> FAILED
    IVR --> QUEUED
    IVR --> VOICEMAIL
    QUEUED --> ABANDONED
    QUEUED --> FAILED
    QUEUED --> INTAKE_ACTIVE
    QUEUED --> MATCHED
    QUEUED --> VOICEMAIL
    INTAKE_ACTIVE --> ABANDONED
    INTAKE_ACTIVE --> FAILED
    INTAKE_ACTIVE --> INTAKE_COMPLETE
    INTAKE_ACTIVE --> MATCHED
    INTAKE_COMPLETE --> ABANDONED
    INTAKE_COMPLETE --> FAILED
    INTAKE_COMPLETE --> MATCHED
    MATCHED --> ABANDONED
    MATCHED --> FAILED
    MATCHED --> MATCHED : re-match
    MATCHED --> OFFERED
    MATCHED --> QUEUED
    OFFERED --> ABANDONED
    OFFERED --> FAILED
    OFFERED --> IN_CALL
    OFFERED --> MATCHED
    IN_CALL --> FAILED
    IN_CALL --> TRANSFERRED
    IN_CALL --> WRAP_UP
    WRAP_UP --> CLOSED
    WRAP_UP --> FAILED
    ABANDONED --> [*]
    CLOSED --> [*]
    FAILED --> [*]
    TRANSFERRED --> [*]
    VOICEMAIL --> [*]

    note right of INTENT_CREATED
        app path only (D19)
    end note
    note right of INTAKE_ACTIVE
        may jump straight to MATCHED (D12/D21)
    end note
    note right of OFFERED
        offer card rings in the BROWSER (D32)
    end note
